# Vk_SR_Engine

./: .gitmodules  CMakeLists.txt
assets/duck/: license.txt
shaders/: frosty.comp  input_structures.glsl  mesh.frag  mesh.vert
src/: CMakeLists.txt  camera.cpp  camera.h  compute_structs.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
